fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,13 @@
   --beige-50: #fbfaf8;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
+  overflow-x: hidden;
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
